--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(${PROJECT_NAME}_tests QuickSortTests.cpp)
+add_executable(${PROJECT_NAME}_tests MergeSortTests.cpp)
 
 target_include_directories(${PROJECT_NAME}_tests PRIVATE ../include)
 
